# fauxdoc

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: do-checks-and-tests.yml  publish.yml
src/fauxdoc/: __init__.py  dtrange.py  emitter.py  group.py  mathtools.py  mixins.py  profile.py  typing.py  warn.py
src/fauxdoc/emitters/: __init__.py  choice.py  fixed.py  fromfields.py  text.py  wrappers.py
src/solrfixtures/: __init__.py  data.py  dtrange.py  emitter.py  exceptions.py  factory.py  group.py  mathtools.py  mixins.py  old_gen.py  profile.py  typing.py
src/solrfixtures/data/: __init__.py  dtrange.py  dtseq.py  emitter.py  exceptions.py  math.py
src/solrfixtures/emitters/: __init__.py  choice.py  counters.py  fixed.py  fromfields.py  text.py  wrappers.py
tests/: conftest.py  old_conftest.py  old_test_factory.py  old_test_profile.py  test_data.py  test_data_dtrange.py  test_data_emitter.py  test_data_exceptions.py  test_data_math.py  test_deprecation_warnings.py  test_deprecations.py  test_dtrange.py  test_emitter.py  test_emitters_choice.py  test_emitters_counters.py  test_emitters_fixed.py  test_emitters_fromfields.py  test_emitters_text.py  test_emitters_wrappers.py  test_exceptions.py  test_factory.py  test_group.py  test_mathtools.py  test_profile.py
