[tool.poetry]
name = "solrfixtures"
version = "1.0.0"
description = "Python package for generating randomized data for populating Solr test fixtures. Sort of like model bakery for Solr."
readme = "README.md"
authors = ["Jason Thomale <jason.thomale@unt.edu>"]
packages = [
    { include = "solrfixtures", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.7"
pytz = [
    { version = ">=2020.5", python = "^3.9" },
    { version = ">=2020.4", python = "~3.7 || ~3.8" }
]
ujson = [
    { version = ">=4.2.0", python = "^3.10" },
    { version = ">=4.0.0", python = "~3.9" },
    { version = ">=2.0.0", python = "~3.7 || ~3.8" }
]
typing_extensions = [
    { version = "^4.1.1", python = "~3.7" }
]
pytest = [
    { version = "^6.2.5", python = "^3.10", optional = true },
    { version = ">=5.4.2", python = "~3.9",  optional = true },
    { version = ">=5.1.0", python= "~3.7 || ~3.8", optional = true }
]

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = flake8,pylint_critical,py{37,38,39,310}-{oldest,latest}
isolated_build = True

[testenv]
extras =
    test
commands =
    pytest

[testenv:py{37,38}-oldest]
deps =
    pytest==5.1.0
    ujson==2.0.0
    pytz==2020.4

[testenv:py39-oldest]
deps =
    pytest==5.4.2
    ujson==4.0.0
    pytz==2020.5

[testenv:py310-oldest]
deps =
    pytest==6.2.5
    ujson==4.2.0
    pytz==2020.5

[testenv:flake8]
basepython=python3.10
skip_install = True
deps =
    flake8
commands =
    flake8 src/solrfixtures tests --exclude=__pycache__

[testenv:pylint_critical]
basepython=python3.10
deps =
    pylint
commands =
    pylint solrfixtures tests --errors-only --ignore=__pycache__

[testenv:pylint_all]
basepython=python3.10
deps =
    pylint
commands =
    pylint solrfixtures tests --ignore=__pycache__ --good-names=_,i,mn,mx,em

[testenv:build_package]
basepython=python3.10
skip_install = True
deps =
    pytest
    twine
    poetry
allowlist_externals =
    bash
commands =
    -python -m poetry version {posargs}
    python -m poetry build
    bash -c "python -m twine check dist/*-$(python -m poetry version -s)-*.whl"
    bash -c "python -m twine check dist/*-$(python -m poetry version -s).*.gz"
    bash -c "python -m pip install dist/*-$(python -m poetry version -s)-*.whl"
    pytest
"""
